# VoxSynopsis

./: .gitignore  AGENTS.md  CLAUDE.md  CORREÇÕES_IMPLEMENTADAS.md  GEMINI.md  README.md  gravador_whisper.py  pyproject.toml  pyrightconfig.json  relatorio_transcricao_20250715_182020.txt  requirements.txt  run_voxsynopsis.sh  style.qss  test_chunking_cuda.py  test_chunking_optimization.py  test_cuda.py  test_ffmpeg_cuda.py  test_model_error_fix.py  ui_vox_synopsis.py  vox_synopsis.py  vox_synopsis_fast_whisper.py
Tests/: claude.md  test_recording_thread.py  test_settings_dialog.py  test_stylesheet.py
core/: __init__.py  audio_preprocessing.py  batch_transcription.py  cache.py  completion_popup.py  config.py  dependency_checker.py  dependency_dialog.py  ffmpeg_cuda.py  gpu_monitor.py  loop_detector.py  main.py  main_window.py  performance.py  recording.py  recovery_manager.py  report_viewer.py  settings_dialog.py  transcription.py
core/reporting/: __init__.py  enhanced_report.py  performance_monitor.py  system_profiler.py  timestamp_manager.py
docs/: Anti_Loop_Recovery_System.md  CUDA_Implementation_Guide.md  Dependency_Validation_System.md  Enhanced_Reporting_System_Plan.md  Performance_Fast_Whisper.md  Performance_Optimization_Plan.md  Performance_Optimization_VoxSynopsis.md  PyQt5_to_PyQt6_Migration_Guide.md  Tests_test_recording_thread.md  Tests_test_settings_dialog.md  Tests_test_stylesheet.md  index.md  style.qss.md  ui_vox_synopsis.md  vox_synopsis_fast_whisper.md
docs/Docs_Tests/: Tests_test_recording_thread.md  ui_vox_synopsis.md  (+1 more)
