[project]
name = "VoxSynopsis"
version = "1.0.0"
description = "High-quality audio recording and automatic transcription using FastWhisper"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ctranslate2>=4.0.0",
    "faster-whisper>=1.1.0",
    "noisereduce>=3.0.0",
    "numpy>=1.21.0",
    "onnxruntime>=1.14.0",
    "psutil>=5.8.0",
    "pydub>=0.25.0",
    "pynvml>=11.0.0",
    "pyqt5>=5.15.0",
    "pyright>=1.1.0",
    "scipy>=1.7.0",
    "sounddevice>=0.4.0",
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]

[tool.ruff]
# Define o comprimento máximo da linha
line-length = 88

[tool.ruff.lint]
# Habilita as regras do Pyflakes (F), pycodestyle (E, W), e isort (I)
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
# Usa o formatador Black
quote-style = "double"
exclude = ["venv", "__pycache__"]
